--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
+            font-size: 1.2rem;
         }
         h2 {
             margin-top: 20px;
