--- a/ru/index.html
+++ b/ru/index.html
@@ -16,6 +16,7 @@
         .section {
             margin-bottom: 20px;
         }
+        ul {list-style: none;}
     </style>
     <script>
         function toggleSection(sectionId, source) {
